k8s/base-app/productpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      labels:
        app: productpage
    spec:
      imagePullSecrets:
      - name: harbor-cred
      containers:
      - name: productpage
        image: registry-supeem.opsta.in.th/library/productpage-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-productpage-dev
  labels:
    app: productpage
spec:
  type: ClusterIP
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
