k8s/base-app/reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      imagePullSecrets:
      - name: harbor-cred
      containers:
      - name: reviews
        image: registry-supeem.opsta.in.th/library/reviews-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-reviews-dev
  labels:
    app: reviews
spec:
  type: ClusterIP
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
