k8s/base-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookinfo-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: bookinfo-supeem-dev.opsta.in.th
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookinfo-productpage-dev
            port:
              number: 9080
